--- a/deployment/service.yaml
+++ b/deployment/service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: sidecar-injector-webhook-svc
-  namespace: sidecar-injector
+  name: name-mutator-webhook-svc
+  namespace: name-mutator
   labels:
-    app: sidecar-injector
+    app: name-mutator
 spec:
   ports:
   - port: 443
     targetPort: 8443
   selector:
-    app: sidecar-injector
+    app: name-mutator
